--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
   },
   "homepage": "",
   "dependencies": {
-    "gh-pages": "^5.0.0"
+    "gh-pages": "^5.0.0",
+    "gsap": "npm:@gsap/shockingly@^3.12.5"
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
